<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.ipn.sixlines.RegisterActivity"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="32dp"
                app:srcCompat="@drawable/lines2logo" />
            <EditText
                android:id="@+id/txt_Name"
                style="@style/Registrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_name"
                android:inputType="textPersonName"
                android:text="" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt_Lname"
                style="@style/Registrar"
                android:ems="10"
                android:hint="@string/str_Lname"
                android:inputType="textPersonName"
                android:text="" />

            <EditText
                android:id="@+id/txt_id"
                style="@style/Registrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="17dp"
                android:ems="10"
                android:hint="@string/str_ID"
                android:inputType="number"
                />

            <EditText
                style="@style/Registrar"
                android:id="@+id/txt_bDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:ems="10"
                android:hint="@string/str_bDay"
                android:inputType="date" />

            <EditText
                style="@style/Registrar"
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:ems="10"
                android:hint="@string/str_email"
                android:inputType="textEmailAddress" />

            <Spinner
                android:id="@+id/spinner_State"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spinner_school"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                style="@style/Registrar"
                android:id="@+id/spinner_career"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_career"
                android:inputType="textPersonName"/>

            <EditText
                style="@style/Registrar"
                android:id="@+id/txt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/str_pass"
                android:inputType="textPassword"
                android:text="" />

            <EditText
                style="@style/Registrar"
                android:id="@+id/txt_cpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/str_cpass"
                android:inputType="textPassword"
                android:text="" />

            <RadioGroup
                android:id="@+id/radioGrp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    style="@style/Registrar"
                    android:id="@+id/radioBtnTeacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_teacher" />

                <RadioButton
                    style="@style/Registrar"
                    android:id="@+id/radioBtnGLeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_gleader" />

                <RadioButton
                    style="@style/Registrar"
                    android:id="@+id/raadioBtnGMortal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_gmortal" />
            </RadioGroup>

            <Button
                style="@style/BotonRegistrar"
                android:id="@+id/btn_Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_uph"
                android:onClick="signup"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
