<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo_login2"
    tools:context="mx.ipn.sixlines.LoginActivity"
    tools:layout_editor_absoluteY="81dp">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="114dp"
        android:layout_height="117dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        app:srcCompat="@drawable/lines" />

    <EditText
        android:id="@+id/txt_login_correo"
        style="@style/Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="172dp"
        android:hint="@string/str_login_correo" />

    <EditText
        android:id="@+id/txt_login_password"
        style="@style/Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="235dp"
        android:hint="@string/str_login_contrasena"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/registrar"
        style="@style/TextLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="42dp"
        android:onClick="register"
        android:text="@string/str_login_registrar" />

    <TextView
        android:id="@+id/aviso1"
        style="@style/TextLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="233dp"
        android:text="@string/str_login_aviso" />

    <TextView
        android:id="@+id/aviso2"
        style="@style/TextLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="210dp"
        android:text="@string/str_login_aviso2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="338dp"
        android:layout_height="62dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="109dp"
        android:onClick="login"
        app:srcCompat="@drawable/button_login" />
</RelativeLayout>
